<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <data>
        <variable
            name="image"
            type="com.example.nasagery_application.model.Image" />
        <variable
            name="viewModel"
            type="com.example.nasagery_application.viewmodel.NASAViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D2000000"
        >
        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.MaterialComponents.TextView"
            android:id="@+id/title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/app_title"
            android:textAppearance="?attr/textAppearanceHeadline1"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/search_InputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/search_InputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_marginStart="@dimen/dimen32"
            android:layout_marginEnd="@dimen/dimen8"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen16"
            android:paddingEnd="@dimen/dimen16"
            android:inputType="text"
            android:textSize="16sp"
            tools:text = "Earth"
            android:textColorHint="@color/colorPrimary"
            android:hint="Enter keyword..."
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintTop_toBottomOf="@id/title_textview"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/horizontal_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_button"
            >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_groupof6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip1"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"/>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip2"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen16"

                    />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip3"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />


                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip4"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />


                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip5"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip6"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip7"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip8"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip9"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip10"
                    app:closeIconEnabled="false"
                    app:chipIconSize="@dimen/dimen12"
                    />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_pressed"
            android:layout_marginEnd="@dimen/dimen32"
            app:layout_constraintStart_toEndOf="@id/search_InputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_InputLayout"
            app:layout_constraintBottom_toBottomOf="@id/search_InputLayout"
            />

        <ImageView
            android:id="@+id/status_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_InputLayout"
            app:layout_constraintTop_toTopOf="@id/search_InputLayout"
            app:layout_constraintBottom_toBottomOf="@id/search_InputLayout"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/see_more_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen16"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_InputLayout"
            app:layout_constraintBottom_toTopOf="@id/swipe_recyclerview"
            tools:text="(Click title to see more)"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scrollview"
            app:layout_constraintBottom_toTopOf="@id/left_arrow_imageview"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen32" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noresults_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <ImageButton
            android:id="@+id/left_arrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginStart="@dimen/dimen120"
            android:layout_marginBottom="@dimen/dimen8"
            android:visibility="invisible"
            android:src="@drawable/ic_arrow_back_blue_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swipe_recyclerview"
            />

        <ImageButton
            android:id="@+id/right_arrow_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginEnd="@dimen/dimen120"
            android:layout_marginBottom="@dimen/dimen8"
            android:visibility="invisible"
            android:src="@drawable/ic_arrow_forward_blue_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swipe_recyclerview"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>